update api order

--- a/src/page/OrderDetailPage/index.scss
+++ b/src/page/OrderDetailPage/index.scss
@@ -37,12 +37,14 @@
           width: 10px;
         }
       }
-
       p {
         margin: 0 !important;
         color: #5ca046;
         font-weight: 700;
         font-size: 15px;
+      }
+      .unpay {
+        color: red;
       }
     }
 
