--- a/src/page/OrderPage/index.css
+++ b/src/page/OrderPage/index.css
@@ -1,23 +1,27 @@
-.order-page{
+.order-page {
     padding: 20px;
 }
-.order-page .order-title{
+
+.order-page .order-title {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.order-page .order-calender .date{
+
+.order-page .order-calender .date {
     padding: 5px 20px;
     border-radius: 6px;
     margin: 20px;
     width: calc(100% - 40px);
     font-size: 15px;
 }
-.order-page .order-sum{
+
+.order-page .order-sum {
     padding-bottom: 10px;
     border-bottom: solid 2px gainsboro;
 }
-.order-page .order-item{
+
+.order-page .order-item {
     margin: 20px;
     padding: 10px;
     width: calc(100% - 40px);
@@ -28,14 +32,24 @@
     border: solid 1px;
     box-shadow: rgba(0, 0, 0, 0.30) 0px 5px 5px;
 }
-.order-page .order-item .orderID{
+
+.order-page .order-item .orderID {
     color: #D20000;
 }
-.order-page .order-item .confirmnative{
+
+.order-page .order-item .confirmnative {
     color: #ffd43b;
     font-size: 11px;
 }
-.order-page .order-item .order-customer, .order-page .order-item .price{
+
+.order-page .order-item .order-customer,
+.order-page .order-item .price {
     padding: 7px 0;
     font-weight: 500;
+}
+
+.order-list {
+    width: 100%;
+    max-height: 650px;
+    overflow-y: scroll;
 }
