--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
 .App {
   text-align: center;
 }
-.MuiBottomNavigationAction-label{
- color: #d83a3a;
+.MuiBottomNavigationAction-label {
+  color: #d83a3a;
 }
-.css-1bjk3jo-MuiButtonBase-root-MuiBottomNavigationAction-root.Mui-selected {
+/* .css-1bjk3jo-MuiButtonBase-root-MuiBottomNavigationAction-root.Mui-selected {
+  color: #d83a3a !important;
+} */
+
+.css-sxw2zh.Mui-selected {
   color: #d83a3a !important;
 }
-
