--- a/src/component/Loading/Loading.style.css
+++ b/src/component/Loading/Loading.style.css
@@ -1,49 +1,51 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.bgLoading {
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  z-index: 9;
+  left: 0;
+  top: 0;
+  background-color: rgba(000, 000, 000, 0.5)
+}
+
 .loader {
   width: 48px;
   height: 48px;
   border-radius: 50%;
-  position: relative;
-  animation: rotate 1s linear infinite;
+  position: absolute;
+  top: 50%;
+  left: 45%;
+  animation: rotate 1s linear infinite
 }
-.loader::before,
-.loader::after {
+
+
+.loader::before , .loader::after {
   content: "";
   box-sizing: border-box;
   position: absolute;
   inset: 0px;
   border-radius: 50%;
-  border: 5px solid #fff;
-  animation: prixClipFix 2s linear infinite;
+  border: 5px solid #FFF;
+  animation: prixClipFix 2s linear infinite ;
 }
-.loader::after {
-  border-color: #ff3d00;
-  animation: prixClipFix 2s linear infinite, rotate 0.5s linear infinite reverse;
-  inset: 6px;
+.loader::after{
+  inset: 8px;
+  transform: rotate3d(90, 90, 0, 180deg );
+  border-color: #d83a3a;
 }
 
 @keyframes rotate {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
+  0%   {transform: rotate(0deg)}
+  100%   {transform: rotate(360deg)}
 }
 
 @keyframes prixClipFix {
-  0% {
-    clip-path: polygon(50% 50%, 0 0, 0 0, 0 0, 0 0, 0 0);
-  }
-  25% {
-    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 0, 100% 0, 100% 0);
-  }
-  50% {
-    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 100% 100%, 100% 100%);
-  }
-  75% {
-    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 0 100%, 0 100%);
-  }
-  100% {
-    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 0 100%, 0 0);
-  }
+    0%   {clip-path:polygon(50% 50%,0 0,0 0,0 0,0 0,0 0)}
+    50%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 0,100% 0,100% 0)}
+    75%, 100%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,100% 100%,100% 100%)}
 }
