--- a/src/page/OrderPage/index.css
+++ b/src/page/OrderPage/index.css
@@ -21,6 +21,14 @@
     border-bottom: solid 2px gainsboro;
 }
 
+.order-page .filter {
+    display: flex;
+    margin: 20px 0;
+    margin-left: 20px;
+    justify-content: space-between;
+    font-size: 20px;
+}
+
 .order-page .order-item {
     margin: 20px;
     padding: 10px;
