--- a/src/page/LoginPage/index.css
+++ b/src/page/LoginPage/index.css
@@ -47,7 +47,7 @@
     font-size: 1.2rem;
     font-weight: bold;
     color: #fff;
-    background-color: #3f51b5;
+    background-color: #d20000; 
     cursor: pointer;
     transition: background-color 0.3s ease-in-out;
   }
