--- a/src/page/ProfilePage/component/ChangePassword/Setting.css
+++ b/src/page/ProfilePage/component/ChangePassword/Setting.css
@@ -7,3 +7,11 @@
 .order-page .order-title .order-title-detail img {
   margin-right: 10px;
 }
+
+.order-page .textInput {
+  width: 280px;
+  height: 28px;
+  border: none;
+  font-size: 18px;
+  background-color: transparent;
+}
